[gd_scene load_steps=7 format=2]

[ext_resource path="res://ui/exp_bar.png" type="Texture" id=1]
[ext_resource path="res://ui/exp_bar_2.png" type="Texture" id=2]
[ext_resource path="res://ui/xp_bar.png" type="Texture" id=3]
[ext_resource path="res://player/Class Magican.gd" type="Script" id=4]
[ext_resource path="res://player/маг1.png" type="Texture" id=5]

[sub_resource type="CircleShape2D" id=1]
radius = 10.0499

[node name="Class Magican" type="KinematicBody2D"]
z_index = 1
script = ExtResource( 4 )

[node name="Camera2D" type="Camera2D" parent="."]
rotation = 1.5708
current = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
rotation = 1.5708
shape = SubResource( 1 )

[node name="player_area" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="player_area"]
shape = SubResource( 1 )

[node name="HpProgress" type="TextureProgress" parent="."]
margin_left = -150.0
margin_top = -80.0
margin_right = -105.0
margin_bottom = -73.0
max_value = 1000.0
value = 1000.0
texture_under = ExtResource( 2 )
texture_progress = ExtResource( 3 )

[node name="ExpProgress" type="TextureProgress" parent="."]
margin_left = -150.0
margin_top = -70.0
margin_right = -105.0
margin_bottom = -63.0
max_value = 5.0
texture_under = ExtResource( 2 )
texture_progress = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 0, -1 )
texture = ExtResource( 5 )

[node name="LabelTimer" type="Label" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 124.0
margin_top = -85.0
margin_right = 188.0
margin_bottom = -71.0
text = "5:00"

[node name="Fireball" type="Timer" parent="."]
wait_time = 6.768

[node name="Cristall" type="Timer" parent="."]

[node name="Lightning" type="Timer" parent="."]

[connection signal="cristall" from="." to="." method="_on_Class_Magican_cristall"]
[connection signal="exp_in_area" from="." to="." method="_on_Class_Magican_exp_in_area"]
[connection signal="fireball" from="." to="." method="_on_Class_Magican_fireball"]
[connection signal="heart_in_area" from="." to="." method="_on_Class_Magican_heart_in_area"]
[connection signal="lightning" from="." to="." method="_on_Class_Magican_lightning"]
[connection signal="timeout" from="Fireball" to="." method="_on_Fireball_timeout"]
[connection signal="timeout" from="Cristall" to="." method="_on_Cristall_timeout"]
[connection signal="timeout" from="Lightning" to="." method="_on_Lightning_timeout"]
